--- a/slides/index.html
+++ b/slides/index.html
@@ -103,6 +103,13 @@
 							 data-separator-vertical="^\n\n"></section>
 		</section>
 
+		<section>
+			<h3>React router</h3>
+			<section data-markdown="tp5.md"
+							 data-separator="^\n\n\n"
+							 data-separator-vertical="^\n\n"></section>
+		</section>
+
 	</div>
 
 	<script src="lib/js/head.min.js"></script>
