--- a/slides/index.html
+++ b/slides/index.html
@@ -47,9 +47,9 @@
 
 			<p>
 				<small>
-					<a href="http://twitter.com/SuperFlaw">@Florent Lepretre</a> /
-					<a href="https://twitter.com/Swiip">@Mathieu Lux</a> /
-					<a href="http://twitter.com/ncuillery">@Nicolas Cuillery</a>
+					Florent Lepretre (<a href="http://twitter.com/SuperFlaw">@SuperFlaw</a>) /
+					Mathieu Lux (<a href="https://twitter.com/Swiip">@Swiip</a>) /
+					Nicolas Cuillery (<a href="http://twitter.com/ncuillery">@ncuillery</a>)
 				</small>
 			</p>
 		</section>
@@ -76,7 +76,7 @@
 		</section>
 
 		<section>
-			<h3>Listons les bières</h3>
+			<h3>Une petite bière ?</h3>
 			<section data-markdown="tp1.md"
 							 data-separator="^\n\n\n"
 							 data-separator-vertical="^\n\n"></section>
@@ -97,7 +97,7 @@
 		</section>
 
 		<section>
-			<h3>Tester c'est douter</h3>
+			<h3>Tester c'est douter !</h3>
 			<section data-markdown="tp4.md"
 							 data-separator="^\n\n\n"
 							 data-separator-vertical="^\n\n"></section>
