Some help in slides

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	<div class="slides">
 		<section>
 			<h2>ReactJS pour les néophytes</h2>
-			<img src="img/react-logo.png" style="width: 50%; height: 50%;">
+			<img src="img/react-logo.png" style="width: 30%; height: 30%;">
 
 			<p>
 				<small>
@@ -108,6 +108,11 @@
 			<section data-markdown="tp5.md"
 							 data-separator="^\n\n\n"
 							 data-separator-vertical="^\n\n"></section>
+		</section>
+
+		<section>
+			<h3>Question ?</h3>
+			<img src="img/done.jpg" />
 		</section>
 
 	</div>
