Un peu d'aide pour les devs

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		<section>
 			<h2>ReactJS pour les néophytes</h2>
 			<img src="img/react-logo.png" style="width: 30%; height: 30%;">
-
+			<p>node node_modules/gulp/bin/gulp.js test</p>
 			<p>
 				<small>
 					Florent Lepretre (<a href="http://twitter.com/SuperFlaw">@SuperFlaw</a>) /
